Crash - Complex case #29530

Closed
opened 2011-12-07 23:55:07 +01:00 by Moolah Nasreddin · 7 comments

%%%winXP, 32bit, r42469

click on "Bake All Dynamics"
click on "Object Mode" then select "Particle Mode"
and it crashes.

I think it's somehow linked with that Keyed Particles can't be cached (maybe) and that
in Keyed Particles sequence I used one PS with Newtonian physics.

Sorry, maybe the file isn't very simple but I had no time to setup this thing again.
%%%

%%%winXP, 32bit, r42469 click on "Bake All Dynamics" click on "Object Mode" then select "Particle Mode" and it crashes. I think it's somehow linked with that Keyed Particles can't be cached (maybe) and that in Keyed Particles sequence I used one PS with Newtonian physics. Sorry, maybe the file isn't very simple but I had no time to setup this thing again. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Crash confirmed, assigned to Janne.%%%

%%%Crash confirmed, assigned to Janne.%%%

%%%Confirmed - FreeBSD 8.2 x86 r42565

I also found a bit more - with a saved startup blend (from a while back) I can start and add particles to the default cube, play a few frames, pause, bake all dynamics, change to particle mode and crash.

If I delete the startup blend so that it uses the internal default blend I can follow the same steps but instead of crashing, particle mode shows up with hair. Object/weight/etc modes still shows small particles but particle mode shows hair.%%%

%%%Confirmed - FreeBSD 8.2 x86 r42565 I also found a bit more - with a saved startup blend (from a while back) I can start and add particles to the default cube, play a few frames, pause, bake all dynamics, change to particle mode and crash. If I delete the startup blend so that it uses the internal default blend I can follow the same steps but instead of crashing, particle mode shows up with hair. Object/weight/etc modes still shows small particles but particle mode shows hair.%%%

%%%Shane, I guess that these hair are editable (after Baking) and allow you to tweek particles' flow. Actually that was why I found this bug - I wanted to edit my particles' flow.%%%

%%%Shane, I guess that these hair are editable (after Baking) and allow you to tweek particles' flow. Actually that was why I found this bug - I wanted to edit my particles' flow.%%%

%%%The case I mention it shows hair strands in particle mode instead of crashing. If I don't play the animation before baking and going to particle mode it shows particles as expected. I mentioned it as it may be a clue as to what causes the crash.%%%

%%%The case I mention it shows hair strands in particle mode instead of crashing. If I don't play the animation before baking and going to particle mode it shows particles as expected. I mentioned it as it may be a clue as to what causes the crash.%%%
Member

%%%Thanks for the report and sorry for the delay! Fix committed in r44045.%%%

%%%Thanks for the report and sorry for the delay! Fix committed in r44045.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29530
No description provided.