Fix [#29530] Changing to particle mode could crash in some cases * If a baked particle didn't have any cached keys creating an edit path for it crashed.